--- a/cmake-registry.in
+++ b/cmake-registry.in
@@ -6,7 +6,7 @@ set -e
 
 CMAKE_REGISTRY_PACKAGES_PATH=$CMAKE_REGISTRY_PATH/packages
 CMAKE_REGISTRY_CACHE_PATH=$CMAKE_REGISTRY_PATH/cache
-VERSION="0.2"
+VERSION="@PROJECT_VERSION@"
 
 declare -A COMMANDS
 
