--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 3.3)
-project(cmake-registry VERSION 0.3.1 LANGUAGES NONE)
+project(cmake-registry VERSION 0.3.2 LANGUAGES NONE)
 
 configure_file(${PROJECT_NAME}.in ${PROJECT_NAME} @ONLY)
 install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME} DESTINATION bin)
+install(FILES LICENSE README.md DESTINATION share/doc/${PROJECT_NAME}-${PROJECT_VERSION})
 
 list(APPEND CPACK_GENERATOR TGZ)
 set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
