--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.3)
-project(cmake-registry VERSION 0.3.2 LANGUAGES NONE)
+project(cmake-registry VERSION 0.3.3 LANGUAGES NONE)
 
 configure_file(${PROJECT_NAME}.in ${PROJECT_NAME} @ONLY)
 install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME} DESTINATION bin)
@@ -11,4 +11,5 @@ set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
 set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
 set(CPACK_SYSTEM_NAME ${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR})
 set(CPACK_PACKAGE_CONTACT "igsha@users.noreply.github.com")
+set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE all)
 include(CPack)
